src/playlist/PlaylistActions.h
@@ -121,8 +121,18 @@ public slots:
     void playlistModeChanged();
 
     void repopulateDynamicPlaylist();
-    void queue( QList<int> rows );
-    void dequeue( QList<int> rows );
+
+    /**
+     * Adds a list of top playlist model rows to the queue.
+     */
+    void queue( const QList<int> &rows );
+
+    /**
+     * Adds a list of playlist item unique ids to the queue.
+     */
+    void queue( const QList<quint64> &ids );
+
+    void dequeue( const QList<int> &rows );
     void restoreDefaultPlaylist();
 
     /**
